<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a01a1a1a"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/share_title"
        android:textColor="#8848BCEB"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#8848BCEB" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ly1"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_wechat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/share_friend"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly2"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@+id/ly1"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_wechatmoments" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/share_friends"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/share_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:background="#80000000"
            android:text="@string/share_cancle"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#88ffffff" />
    </RelativeLayout>

</LinearLayout>