<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7e7e7">
    <!--密码找回页面-->
    <RelativeLayout
        android:id="@+id/Forgetpassword_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/green">

        <RelativeLayout
            android:id="@+id/Forgetpassword_return"
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/iv_back" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="密码找回"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Forgetpassword_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/re_tel_layout"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:background="@drawable/border_radius">
            >

            <ImageView
                android:id="@+id/tel_img"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/iv_phones" />

            <EditText
                android:id="@+id/Forgetpassword_et_phone"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/tel_img"
                android:background="@drawable/border_radius"
                android:hint="@string/re_tel"
                android:inputType="phone"
                android:maxLength="11"
                android:textColorHint="@color/onsell_time_color"
                android:textSize="12sp"

                />

            <Button
                android:id="@+id/Forgetpassword_get_coder"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_fillet"
                android:text="@string/re_obtain_Ver_code"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Ver_code_layout"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@id/re_tel_layout"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_radius">

            >

            <TextView
                android:id="@+id/Ver_code_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/re_Ver_code_name"
                android:textColor="@color/green"
                android:textSize="13sp"

                />

            <EditText
                android:id="@+id/Forgetpassword_Ver_code_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/Ver_code_text"
                android:background="@drawable/border_radius"
                android:hint="@string/re_input_Ver_code"
                android:maxLength="6"
                android:textColorHint="@color/onsell_time_color"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Prefecture"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@+id/Ver_code_layout"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_radius">
            >

            <TextView
                android:id="@+id/Set_pass_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/pass_img"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="密码："
                android:textColor="@color/green" />

            <EditText
                android:id="@+id/Forgetpassword_Set_pass_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@id/Set_pass_img"
                android:background="@drawable/border_radius"
                android:hint="@string/re_Set_pass"
                android:inputType="textPassword"
                android:maxLength="11"
                android:textColorHint="@color/onsell_time_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/re_ok_pass_layout"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@+id/Prefecture"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_radius"

            >

            <TextView
                android:id="@+id/re_ok_pass_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/re_ok_pass_name"
                android:textColor="@color/green"
                android:textSize="13sp"

                />

            <EditText
                android:id="@+id/Forgetpassword_Vre_ok_pass_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/re_ok_pass_text"
                android:background="@drawable/border_radius"
                android:hint="再次输入密码"
                android:inputType="textPassword"
                android:textColorHint="@color/onsell_time_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/re_ok_layout"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@+id/re_ok_pass_layout"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/Forgetpassword_ok__btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button_fillet"
                android:onClick="re_ok"
                android:text="@string/re_ok"
                android:textColor="@color/white"
                android:textSize="12sp"

                />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
